# ROTEX-WiFi

./: CMakeLists.txt  Force_code.c  force.py  wireless_transfer.py
include/: lwipopts.h  wireless_transfer.h
src/: CMakeLists.txt  SampleTorqueData.csv  force_code_python_csv.py  main.c  shtp.c  wireless_transfer.c
